﻿Change by Codex: add manager user response tests
Update ManagerUserController tests to validate DTO mapping and response JSON shape for manager user endpoints.

Prompt: Prompt 2 ? Add focused tests for ManagerUserController response shape

You are continuing the /manager/users-only change.

Scope for this prompt:
- ONLY update tests relevant to ManagerUserController.
- Do NOT modify other controller tests yet.
- Do NOT broaden the audit to other endpoints yet.

Goal:
Lock in the new DTO-based response shape for the /manager/users endpoint family.

Requirements to verify:
- no id field in responses
- no oauthKey field in responses
- externalId is present
- no issueReports field in responses
- manager endpoints still work with the same authorization expectations
- controller unit tests should reflect DTO returns instead of raw UserProfile returns

Please update/add tests as follows:

1) Update ManagerUserControllerUnitTest
   - Adjust it for the new ManagerUserResponse return types.
   - Do NOT just assert same(entity, result) anymore.
   - Assert that the DTO contains the expected mapped values from a UserProfile entity.
   - Add coverage for:
     - getAll
     - get by externalId
     - patch manager-status
     - patch enabled
   - For at least one mapped response, explicitly assert:
     - externalId matches
     - displayName matches
     - email matches
     - avatar matches if practical
     - isManager matches
     - timeCreated matches if practical
     - userEnabled matches
   - Keep the existing 404 behavior tests.

2) Update ManagerUserControllerTest (MockMvc / integration-style controller test)
   - Keep the existing auth tests.
   - Expand the manager-allowed GET /manager/users test so it verifies JSON payload shape, not just 200 OK.
   - Mock userService.getAll() to return at least one populated UserProfile.
   - Add JSON assertions for the first element:
     - $.length() == expected size if practical
     - $[0].externalId exists and matches expecte